--- a/Competitions.html
+++ b/Competitions.html
@@ -163,7 +163,7 @@ function search(evt){
              //document.getElementsByClassName("asparagus").style.display = 'none';
         }
     }
-    for (i = 0; i< .length; i++){
+    for (i = 0; i< Tennis.length; i++){
         if (searchTerm == Tennis[i]){
             //alert("Penne")
             $(".tennis").show()
