--- a/Competitions.html
+++ b/Competitions.html
@@ -92,7 +92,7 @@
                     <h2>Search</h2>
                     <form class ="search-bar-form">
                         <input type = "text" class = "search-bar" id = "search-bar">
-                        <button onClick ="search()"class="search-button btn btn-default btn-xl sr-button">Submit</button>
+                        <a onClick ="search()"class="search-button btn btn-default btn-xl sr-button">Submit</a>
 
                     </form>
                 </div>
