--- a/Competitions.html
+++ b/Competitions.html
@@ -90,7 +90,7 @@
                     <h2 class="section-heading"></h2>
                     <h3 class="section-subheading text-muted">Browse through our many competitions!</h3>
                     <h2>Search</h2>
-                    <form class ="search-bar-form">
+                    <form class ="search-bar-form" onkeypress="return event.keyCode != 13;>
                         <input type = "text" class = "search-bar" id = "search-bar">
                         <button type="button" onClick ="search()"class="search-button btn btn-default btn-xl sr-button">Submit</button>
 
