--- a/mycompetitions.html
+++ b/mycompetitions.html
@@ -136,7 +136,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img id = "image1" alt = "https://i.imgur.com/V8IEq7q.png?1" width = "349" height="249.26" />
+                        <img id = "image1" alt = " " width = "349" height="249.26" />
 
                     </a>
                     <div class="portfolio-caption">
@@ -158,7 +158,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img id = "image2" alt = "img/kitkat-logo.png" width = "349" height="249.26" />
+                        <img id = "image2" alt = " " width = "349" height="249.26" />
 
                     </a>
                     <div class="portfolio-caption">
@@ -180,7 +180,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img id = "image3" alt = "img/kitkat-logo.png" width = "349" height="249.26" />
+                        <img id = "image3" alt = " " width = "349" height="249.26" />
 
                     </a>
                     <div class="portfolio-caption">
