--- a/mycompetitions.html
+++ b/mycompetitions.html
@@ -191,11 +191,13 @@
                             <button type = "button">Submit</button>
                         </form>
                         <h4 class="title-3">Title</h4>
-
                     </div>
                 </div>
             </div>
         </div>
+          <div>
+                <iframe src="https://calendar.google.com/calendar/embed?title=Competitions%20Near%20Me&amp;height=500&amp;wkst=1&amp;bgcolor=%23ff9900&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="700" height="500" frameborder="0" scrolling="no"></iframe>
+          </div>
     </section>
 
     <!-- Contact Section -->
