--- a/mycompetitions.html
+++ b/mycompetitions.html
@@ -196,7 +196,9 @@
             </div>
         </div>
           <div>
+              <center>
                 <iframe src="https://calendar.google.com/calendar/embed?title=Competitions%20Near%20Me&amp;height=500&amp;wkst=1&amp;bgcolor=%23ff9900&amp;ctz=America%2FNew_York" style="border:solid 1px #777" width="700" height="500" frameborder="0" scrolling="no"></iframe>
+             </center>
           </div>
     </section>
 
