--- a/mycompetitions.html
+++ b/mycompetitions.html
@@ -144,7 +144,7 @@
                         onchange="document.getElementById('image1').src = window.URL.createObjectURL(this.files[0])">
                         <form class ="title-rename-form1">
                             <input type = "text" class = "title-rename-1">
-                            <button type = "button" on click ="document.getElementById('title-rename-form3').submit()">Submit</button>
+                            <button type = "button" on click ="document.getElementById('title-rename-form3').button()">Submit</button>
                         </form>
                         <h4 class="title-1">Title</h4>
 
@@ -166,7 +166,7 @@
                         onchange="document.getElementById('image2').src = window.URL.createObjectURL(this.files[0])">
                         <form class ="title-rename-form2">
                             <input type = "text" class = "title-rename-2">
-                           <button type = "button" on click ="document.getElementById('title-rename-form3').submit()">Submit</button>
+                           <button type = "button" on click ="document.getElementById('title-rename-form3').button()">Submit</button>
                         </form>
                         <h4 class="title-2">Title</h4>
 
@@ -188,7 +188,7 @@
                         onchange="document.getElementById('image3').src = window.URL.createObjectURL(this.files[0])">
                         <form class ="title-rename-form3">
                             <input type = "text" class = "title-rename-3">
-                            <button type = "button" on click ="document.getElementById('title-rename-form3').submit()">Submit</button>
+                            <button type = "button" on click ="document.getElementById('title-rename-form3').button()">Submit</button>
                         </form>
                         <h4 class="title-3">Title</h4>
                     </div>
