--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="https://pbs.twimg.com/profile_images/924554727685283840/ewA2pxWy_400x400.jpg" class="img-responsive img-circle" alt="" height=262 width=380>
-                        <h4>Venkat Kannan</h4> 
+                        <img src="https://www.instagram.com/p/BWIeN8FgN57/?taken-by=theworldofsofia" class="img-responsive img-circle" alt="" height=262 width=380>
+                        <h4>Sofia Ferrabue</h4> 
                         <p class="text-muted">Developer</p>
                         <ul class="list-inline social-buttons">
 
-                            <li><a href="https://www.facebook.com/venkat.kannan.5099"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://www.facebook.com/sofia.ferrabue"><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="https://github.com/VenkatKannan0705"><i class="fa fa-github"></i></a>
                             </li>
