--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
             <div class="row">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="https://www.instagram.com/p/BWIeN8FgN57/?taken-by=theworldofsofia" class="img-responsive img-circle" alt="" height=262 width=380>
+                        <img src="https://scontent.fdet1-1.fna.fbcdn.net/v/t1.0-1/p160x160/18698485_1055005671300506_7671302800308292275_n.jpg?oh=8c43b38762979754a4c67a89e153af70&oe=5AA586CD" class="img-responsive img-circle" alt="" height=262 width=380>
                         <h4>Sofia Ferrabue</h4> 
                         <p class="text-muted">Developer</p>
                         <ul class="list-inline social-buttons">
 
                             <li><a href="https://www.facebook.com/sofia.ferrabue"><i class="fa fa-facebook"></i></a>
                             </li>
-                            <li><a href="https://github.com/VenkatKannan0705"><i class="fa fa-github"></i></a>
+                            <li><a href="https://github.com/ferrabueso"><i class="fa fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
