--- a/Competitions.html
+++ b/Competitions.html
@@ -438,16 +438,20 @@ function search(evt){
                                 <p class="item-intro text-muted">
 <b>Competitions For You:</b><br>
 
-Valdosta National 2018: Zip Code 1) 31601 Valdosta - Georgia 
+Valdosta National 2018
+<br>
    <a href="http://artdeadlines.com/artman/publish/valdosta.shtml">http://artdeadlines.com/artman/publish/valdosta.shtml</a>
 <br>
 
-    Americas 2018: Paperworks: Zip Code 2) 58707 Minot - North Dakota
+    Americas 2018: Paperworks
+                                    <br>
     <a href="https://www.minotstateu.edu/nac/_documents/pw_2018.pdf">https://www.minotstateu.edu/nac/_documents/pw_2018.pdf</a>
 
 <br>
-LeMoyne Chain of Parks Art Festival: Zip Code 3) 32301 Tallahassee - Florida
+LeMoyne Chain of Parks Art Festival
+                                    <br>
     <a href="http://chainofparks.org/artists/">http://chainofparks.org/artists/</a>
+   <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=M2Z2Mmlua2U4Z2hzbmluMnB1OHZqMzNzbXEgajdmOThra2trM2xsamkyNWVjMDh2Z2puODBAZw&amp;tmsrc=j7f98kkkk3llji25ec08vgjn80%40group.calendar.google.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
 <br>
 
   </p>
